# chaosplatform-grpc

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  ci.bash  generate.bash  generate.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
chaosplt_grpc/: __init__.py
chaosplt_grpc/activity/: activity_pb2.py  activity_pb2_grpc.py  client.py  message.py  server.py
chaosplt_grpc/auth/: auth_pb2.py  auth_pb2_grpc.py  client.py  message.py  server.py
chaosplt_grpc/execution/: client.py  execution_pb2.py  execution_pb2_grpc.py  message.py  server.py
chaosplt_grpc/experiment/: client.py  experiment_pb2.py  experiment_pb2_grpc.py  message.py  server.py
chaosplt_grpc/organization/: client.py  message.py  organization_pb2.py  organization_pb2_grpc.py  server.py
chaosplt_grpc/registration/: client.py  message.py  registration_pb2.py  registration_pb2_grpc.py  server.py
chaosplt_grpc/scheduler/: client.py  message.py  scheduler_pb2.py  scheduler_pb2_grpc.py  server.py
chaosplt_grpc/scheduling/: client.py  message.py  scheduling_pb2.py  scheduling_pb2_grpc.py  server.py
chaosplt_grpc/user/: client.py  message.py  server.py  user_pb2.py  user_pb2_grpc.py
chaosplt_grpc/workspace/: client.py  message.py  server.py  workspace_pb2.py  workspace_pb2_grpc.py
docs/: generate.md  install.md
tests/: test_grpc.py
